--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kontakte",
+  "name": "Vue-projektarbeit",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^3.3.2",
     "vue": "^2.6.10",
+    "vue-material": "^1.0.0-beta-11",
     "vue-router": "^3.1.3"
   },
   "devDependencies": {
@@ -23,6 +24,7 @@
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-vue": "^5.0.0",
     "prettier": "^1.18.2",
+    "sass-loader": "^8.0.0",
     "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
@@ -44,6 +46,11 @@
       "autoprefixer": {}
     }
   },
+  "keywords": [
+    "vue-material",
+    "material-design",
+    "vue"
+  ],
   "browserslist": [
     "> 1%",
     "last 2 versions"
