--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "core-js": "^3.3.2",
+    "node-sass": "^4.13.0",
     "vue": "^2.6.10",
+    "vue-axios": "^2.1.5",
     "vue-material": "^1.0.0-beta-11",
     "vue-router": "^3.1.3",
     "vuelidate": "^0.7.4"
@@ -24,7 +27,6 @@
     "eslint": "^5.16.0",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-vue": "^5.0.0",
-    "node-sass": "^4.13.0",
     "prettier": "^1.18.2",
     "sass-loader": "^8.0.0",
     "vue-template-compiler": "^2.6.10"
