--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
-  "name": "Vue-projektarbeit",
+  "name": "vue-projektarbeit",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "serve:api": "php -S 127.0.0.1:8085"
   },
   "dependencies": {
     "axios": "^0.19.0",
     "core-js": "^3.3.2",
     "node-sass": "^4.13.0",
+    "validator": "^12.1.0",
     "vue": "^2.6.10",
     "vue-axios": "^2.1.5",
     "vue-material": "^1.0.0-beta-11",
@@ -19,31 +21,11 @@
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.0.0",
-    "@vue/cli-plugin-eslint": "^4.0.0",
     "@vue/cli-plugin-router": "^4.0.0",
     "@vue/cli-service": "^4.0.0",
-    "@vue/eslint-config-prettier": "^5.0.0",
-    "babel-eslint": "^10.0.3",
-    "eslint": "^5.16.0",
-    "eslint-plugin-prettier": "^3.1.1",
-    "eslint-plugin-vue": "^5.0.0",
     "prettier": "^1.18.2",
     "sass-loader": "^8.0.0",
     "vue-template-compiler": "^2.6.10"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/essential",
-      "@vue/prettier"
-    ],
-    "rules": {},
-    "parserOptions": {
-      "parser": "babel-eslint"
-    }
   },
   "postcss": {
     "plugins": {
