--- a/package.json
+++ b/package.json
@@ -11,34 +11,38 @@
   "dependencies": {
     "axios": "^0.19.0",
     "core-js": "^3.3.2",
-    "node-sass": "^4.13.0",
     "validator": "^12.1.0",
     "vue": "^2.6.10",
     "vue-axios": "^2.1.5",
     "vue-material": "^1.0.0-beta-11",
     "vue-router": "^3.1.3",
-    "vuelidate": "^0.7.4"
+    "vuelidate": "^0.7.4",
+    "vuetify": "^2.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.0.0",
     "@vue/cli-plugin-router": "^4.0.0",
     "@vue/cli-service": "^4.0.0",
+    "node-sass": "^4.13.1",
     "prettier": "^1.18.2",
-    "sass-loader": "^8.0.0",
-    "vue-template-compiler": "^2.6.10"
+    "sass": "^1.19.0",
+    "sass-loader": "^8.0.2",
+    "vue-cli-plugin-vuetify": "^2.0.3",
+    "vue-template-compiler": "^2.6.10",
+    "vuetify-loader": "^1.3.0"
   },
   "postcss": {
     "plugins": {
       "autoprefixer": {}
     }
   },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions"
+  ],
   "keywords": [
     "vue-material",
     "material-design",
     "vue"
-  ],
-  "browserslist": [
-    "> 1%",
-    "last 2 versions"
   ]
 }
